@@ -108,6 +108,8 @@
     <java classname="${main.class}" classpathref="project.class.path" fork="true">
       <jvmarg value="-Dfile.encoding=${compile.encoding}" />
       <jvmarg value="-Duser.language=${user.language}" />
+      <jvmarg value="--add-opens=java.desktop/javax.swing=ALL-UNNAMED" if:set="jdk9orlater" />
+      <jvmarg value="--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED" if:set="jdk9orlater" />
       <jvmarg value="--add-opens=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED" if:set="jdk9orlater" />
     </java>
   </target>
